app/assets/stylesheets/application.css.scss
@import "base";
@import "fonts";
@import "defaults";
@import "vendor";


/***************************************************
**  LAYOUT + GRID
***************************************************/

.holder, .wrapper {
  width: $rowWidth;
  margin: 0 auto;
}



@include sticky-footer(0, "#content", "#layout_footer", "#main-footer");

// Header
//--------------------------------------------------

header#main-header {
  
  .header-pre-wrap {
    height: 30px;
    background: $gray2;

    
    .container {
      position: relative;
      
      .what-badge {
        width: 30px;
        height: 35px;
        position: absolute;
        top: 0;
        left: 0;
        background: transparent inline-image("what-badge.png") no-repeat 0 0;
      }
      
      p {
        height: 30px;
        line-height: 30px;
        padding: 0 0 0 40px;
        color: $gray4;
        text-shadow: 0 1px $gray1;
        margin: 0;
      }
      
    }
    
  }// End of .header-pre-wrap
  
  .header-wrap {
    height: 60px;
    border-bottom: solid 1px $gray1;
    @include background-image(linear-gradient($white, $white 60%, $gray2 200%));
    
    .logo {
      height: 32px;
      width: 287px;
      display: block;
      margin: 16px 30px 0 0;
      float: left;
      
      a {
        height: 32px;
        width: 287px;
        display: block;
        @include hide-text;
        background: transparent inline-image("logo.png") no-repeat 0 0;
      }
    }// End of .logo
    
    nav {
      width: 643px;
      height: 60px;
      float: left;
      
      .current-user {
        float: right;
        height: 60px;
        line-height: 60px;
        padding-right: 20px;

        a {
          margin-left: 10px;
        }
      }
      
      ul {
        height: 60px;
        margin: 0;
        
        li {
          height: 60px;
          float: left;
          list-style: none;
          
          a {
            display: block;
            font-weight: bold;
            text-shadow: 0 1px $gray1;
          }
        }
        
      }
      
      ul.main-menu {
        float: left;
        
        li {
          border-right: solid 1px $gray1;
          
          a {
            padding: 18px 20px;
          }
          
        }
      }
      
      ul.login-menu {
        float: right;
        width: 220px;
        
        li {
          
          span {
            float: left;
          }
          
          a {
            padding: 18px 0 18px 20px;
          }
          
        }
      }

      .languages {
        float: right;
        height: 60px;
        line-height: 60px;
        text-align: center;
        cursor: pointer;
        position: relative;

        .current {
          padding: 5px;
          background-color: $gray4;
          color: $white;
          text-transform: uppercase;
          font-size: ms(0);
          line-height: auto;
          @include border-radius(5px);
          padding-right: 20px;
          position: relative;

          &:before{
            position: absolute;
            line-height: 56px;
            right: 6px;
          }
        }

        .list {
          position: absolute;
          top: 37px;
          right: 0;
          height: auto;
          background-color: $gray4;
          padding: 6px 15px;
          @include border-radius(5px);
          @include border-top-right-radius(0);
          display: none;


          li {
            height: auto;

            a {
              color: $gray2;
              font-weight: normal;

              &:hover{
                color: $white;
              }
            }
          }
        }

        &:hover .list {
            display: block;
        }
      }
      
    }// End of nav
    
  }// End of .header-wrap
  
  .header-green-margin {
    height: 10px;
    margin-bottom: 20px;
    background-color: $green;
    border-bottom: solid 1px darken($green, 10%);
  }
  
}// End of header

// End of Header
//--------------------------------------------------



// Landing
//--------------------------------------------------

.slogan-landing {
  height: 570px;
  background: #FFFFFF url("landing_bg2.jpg") top center no-repeat;
  position: relative;

  h1{
    color: $white;
    text-align: center;
    text-transform: uppercase;
    padding-top: 120px;
    font-weight: normal;

    span {
      font-size: 1.6em;
      display: block;
      font-weight: bold;

      em {
        color: $green;
        font-style: normal;
        font-weight: bold;
        font-size: 1.1em;
      }
    }
  }

  .circles {
    position: absolute;
    top: 430px;
    left: 50%;
    margin-left: -480px;
    width: 960px;
    height: 200px;

    h3 {
      text-align: center;
      color: $black;
      font-size: 22px;
      font-weight: normal;
    }
    .circle {
      width: 150px;
      height: 150px;
      margin: 0 auto;
      background: url("circles_4.png") no-repeat left top;
      margin-bottom: 20px;

      &.c1 { background-position: -2px -6px;}
      &.c2 { background-position: -236px -6px;}
      &.c3 { background-position: -453px -6px;}
      &.c4 { background-position: -688px -6px;}
    }
  }

  .get-involved {
    width: 260px;
    height: 60px;
    display: block;
    position: absolute;
    top: 280px;
    left: 50%;
    margin-left: -130px;
    background-color: $green;
    color: $white;
    text-transform: uppercase;
    line-height: 60px;
    font-size: 20px;
    font-weight: bold;
    text-align: center;

    &:hover{
      background-color: darken($green, 5%);
    }
  }
}

.landing_collage {
  background-color: $white;

  img {
    display: block;
    margin: 0 auto;
  }
}
/* ... */

